--- a/news.html
+++ b/news.html
@@ -28,27 +28,40 @@
 		</nav>
 	  </header>
 	  <div class='main'>
-		<div class='line'>
-			
-		</div>
+		<div class='line'></div>
 		<div class='content__content'>
 		<div class='content'>
 		  <div class='horizont-line'>
-		    <div class='tochka'></div>
+		    <div class='tochka'><span class='tochka-date'>07</span></div>
 		  </div>
-		  <div class='post'>
-				
+		  <div class='post_news'>
+			<p class='text_news'>
+			  Появился ещё один никому ненужный блог, кроме меня конечно, 
+			но мне все равно, а как я иначе научусь веб-разработке.
+			</p>
+			<p class='avtor-and-data'>
+			  Posted on 07.12.2012 by <a href='#user'>vyacheslav</a>
+			</p>
 		  </div>
 		</div>
 		
 		<div class='content'>
 		  <div class='horizont-line'>
-		    <div class='tochka'></div>
+		    <div class='tochka'><span class='tochka-date'>07</span></div>
 		  </div>
-		  <div class='post'>
-				
+		  <div class='post_news'>
+			<p class='text_news'>
+			  Появился ещё один никому ненужный блог, кроме меня конечно, 
+			но мне все равно, а как я иначе научусь веб-разработке.
+			</p>
+			<p class='avtor-and-data'>
+			  Posted on 07.12.2012 by <a href='#user'>vyacheslav</a>
+			</p>
 		  </div>
 		</div>
+		
+		
+		
 		
 		
 		</div>
