--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
 	<title>My blog</title>
 	<meta http-equiv='Content-Type' content='text/html'; charset='utf-8'>
+	<meta name="yandex-verification" content="a87e726a3d3ecf44" />
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
 	<link href='style2.css' rel='stylesheet'>
     <link href='reset.css' rel='stylesheet'>
