--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		      <div class='post'>
 			    <h1>Питонячий дайджест, выпуск 1</h1>
 				<p class='date'>
-				  Posted on 07.12.2012 by <a href='#user'>Николай</a>
+				  Posted on 07.12.2012 by <a href='#user'>Vyacheslav</a>
 				</p>
 			    <p class='text'>
 				  Привет. Я веду канал @pythonetc с советами про Python в частности и про программирование в целом. С этого месяца мы запускаем серию дайджестов с лучшими постами за месяц в переводе на русский.
@@ -73,7 +73,7 @@
 			  <div class='post'>
 			    <h1>Как Prius, но только на Linux: размышляем о гибридном офисе</h1>
 				<p class='date'>
-				  Posted on 07.12.2012 by <a href='#user'>Николай</a>
+				  Posted on 07.12.2012 by <a href='#user'>Vyacheslav</a>
 				</p>
 				<p class='text'>
 				  Прошлые материалы о неприглядных особенностях Windows (обновления, например) натолкнули на мысль порассуждать о Linux-альтернативе. Да, идея не нова, но появилось немало облачных инструментов, которыми можно «заткнуть» традиционно слабые места *nix.
@@ -88,7 +88,7 @@
 			  <div class='post'>
 			    <h1>Теория счастья. Закон арбузной корки и нормальность ненормальности</h1>
 				<p class='date'>
-				  Posted on 07.12.2012 by <a href='#user'>Николай</a>
+				  Posted on 07.12.2012 by <a href='#user'>Vyacheslav</a>
 				</p>
 				<p class='text'>
 				  Читатели, знакомые со статистикой, конечно же, много раз видели как для различных несимметричных распределений мода (максимум на графике плотности вероятности) не совпадает со средним значением или математическим ожиданием. То есть, среднее значение не соответствует самой большой плотности вероятности, но всё равно, на то оно и ожидаемое, чтобы быть если уже и не самым часто встречающимся, то, по крайней мере, доминирующим. Однако, не всё так просто. До сих пор мы рассматривали одновариантные распределения — распределения в одномерном пространстве исходов. Но жизнь многогранна, и уж точно не одномерна! А при добавлении дополнительных размерностей могут случаться весьма неожиданные вещи. 
